--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -4,21 +4,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id = "@+id/first_tab"
+        android:id = "@+id/main_tab"
         app:showAsAction="always"
         android:enabled="true"
         android:icon="@android:drawable/ic_menu_call"
-        android:title="Write" />
+        android:title="메인" />
+
     <item
-        android:id = "@+id/second_tab"
+        android:id = "@+id/note_tab"
         app:showAsAction="always"
         android:enabled="true"
         android:icon="@android:drawable/ic_menu_edit"
-        android:title="Write" />
+        android:title="메모" />
+
     <item
-        android:id = "@+id/third_tab"
+        android:id = "@+id/setting_tab"
         app:showAsAction="always"
         android:enabled="true"
         android:icon="@android:drawable/ic_menu_agenda"
-        android:title="Write" />
+        android:title="설정" />
 </menu>
