--- a/client/app/src/main/res/layout/fragment_main.xml
+++ b/client/app/src/main/res/layout/fragment_main.xml
@@ -9,12 +9,14 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="QR코드 스캔" />
+        android:layout_gravity="left"
+        android:text="@string/qr_scan" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="주변 QR노트 찾기" />
+        android:layout_gravity="right"
+        android:text="@string/qr_find" />
 
 </FrameLayout>
