--- a/client/app/src/main/res/layout/fragment_note.xml
+++ b/client/app/src/main/res/layout/fragment_note.xml
@@ -5,10 +5,18 @@
     android:layout_height="match_parent"
     tools:context=".NoteFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <Button
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:text="@string/note_create" />
+
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:text="@string/note_list" />
 
 </FrameLayout>
