--- a/client/app/src/main/res/layout/fragment_note.xml
+++ b/client/app/src/main/res/layout/fragment_note.xml
@@ -6,17 +6,17 @@
     tools:context=".NoteFragment">
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/note_create_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="left"
-        android:text="@string/note_create" />
+        android:text="@string/button_string_note_create" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/note_list_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right"
-        android:text="@string/note_list" />
+        android:text="@string/button_string_note_list" />
 
 </FrameLayout>
