--- a/client/app/src/main/res/layout/fragment_note.xml
+++ b/client/app/src/main/res/layout/fragment_note.xml
@@ -22,10 +22,20 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:text="@string/button_string_note_list" />
-        <ListView
-            android:id="@+id/list_view"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent">
+
+            <ListView
+                android:id="@+id/list_view"
+                android:layout_width="190dp"
+                android:layout_height="match_parent" />
+            <ListView
+                android:id="@+id/memo_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        </LinearLayout>
     </LinearLayout>
 
 
