--- a/client/app/src/main/res/menu/bottom_menu.xml
+++ b/client/app/src/main/res/menu/bottom_menu.xml
@@ -7,7 +7,7 @@
         android:id = "@+id/main_tab"
         app:showAsAction="always"
         android:enabled="true"
-        android:icon="@android:drawable/ic_menu_call"
+        android:icon="@android:drawable/ic_menu_camera"
         android:title="메인" />
 
     <item
