--- a/client/app/src/main/res/layout/fragment_note.xml
+++ b/client/app/src/main/res/layout/fragment_note.xml
@@ -14,6 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="left"
+            android:onClick="ClickMakeNoteButton"
             android:text="@string/button_string_note_create" />
 
         <Button
