--- a/client/app/src/main/res/layout/fragment_note.xml
+++ b/client/app/src/main/res/layout/fragment_note.xml
@@ -57,6 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right|bottom"
+        android:onClick="ClickMakeNoteButton"
         android:clickable="true"
         android:text="@string/button_string_note_create"
         android:src="@android:drawable/ic_input_add"/>
