--- a/client/app/src/main/res/layout/fragment_main.xml
+++ b/client/app/src/main/res/layout/fragment_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,37 +11,31 @@
         android:id="@+id/qr_scan_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="left|center"
+        android:layout_gravity="start"
         android:onClick="ClickQRScanButton"
         android:text="@string/button_string_qr_scan" />
-
-    <Button
-        android:id="@+id/qr_find_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:text="@string/button_string_qr_find" />
 
     <Button
         android:id="@+id/qr_generate_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right|center"
+        android:layout_gravity="end"
         android:onClick="ClickQRGenerateButton"
         android:text="@string/button_string_qr_generate" />
 
     <ImageView
         android:id="@+id/generated_qrcode"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="center"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
+        android:scaleType="centerCrop"
         android:src="@drawable/button_rect_normal" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
+        android:layout_gravity="bottom|center"
         android:text="TextView" />
 
 </FrameLayout>
