--- a/client/app/src/main/res/layout/fragment_makenote.xml
+++ b/client/app/src/main/res/layout/fragment_makenote.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_weight="1"
     android:orientation="vertical"
-    tools:context=".MakeNote">
+    tools:context=".Note.MakeNote">
 
     <LinearLayout
         android:layout_width="match_parent"
