--- a/client/app/src/main/res/layout/fragment_note.xml
+++ b/client/app/src/main/res/layout/fragment_note.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginBottom="60dp"
-    tools:context=".NoteFragment">
+    tools:context=".Note.NoteFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
