--- a/client/app/src/main/res/layout/fragment_makenote.xml
+++ b/client/app/src/main/res/layout/fragment_makenote.xml
@@ -22,7 +22,7 @@
 
             <EditText
                 android:id="@+id/editNote_Head"
-                android:layout_width="350dp"
+                android:layout_width="155dp"
                 android:layout_height="match_parent"
                 android:ems="10"
                 android:gravity="top"
@@ -35,7 +35,7 @@
 
             <Button
                 android:id="@+id/button_save"
-                android:layout_width="wrap_content"
+                android:layout_width="54dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:layout_marginTop="0.5mm"
@@ -45,11 +45,25 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/button_load"
                 tools:ignore="SpeakableTextPresentCheck" />
+
+            <Button
+                android:id="@+id/button_qr_show"
+                android:layout_width="114dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:layout_marginTop="0.5mm"
+                android:layout_marginRight="1mm"
+                android:text="@string/button_string_qr_show"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/button_load"
+                tools:ignore="SpeakableTextPresentCheck" />
+
+
             <ImageView
                 android:id="@+id/qr_imageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="13"
                 android:src="@drawable/button_rect_normal"/>
         </LinearLayout>
 
