디자인 수정
Signed-off-by: LHJ1355 <59160920+LHJ1355@users.noreply.github.com>

--- a/client/app/src/main/res/values/colors.xml
+++ b/client/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="colorWhite">#FFFFFF</color>
+    <color name="list_background">#bcf0ff</color>
+    <color name="list_background_pressed">#04b3a1</color>
 </resources>
