--- a/client/app/src/main/res/layout/activity_loading.xml
+++ b/client/app/src/main/res/layout/activity_loading.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/colorWhite">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"
-        android:gravity="center" />
+        android:scaleType="center"
+        android:gravity="center"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
