--- a/client/app/src/main/res/layout/fragment_note.xml
+++ b/client/app/src/main/res/layout/fragment_note.xml
@@ -3,31 +3,41 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="60dp"
+    android:layout_marginTop="20dp"
     tools:context=".Note.NoteFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:baselineAligned="false">
+        android:baselineAligned="false"
+        android:layout_marginRight="10dp">
+
         <ListView
             android:id="@+id/list_view"
             android:layout_width="0dp"
-            android:layout_weight="2"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            android:layout_weight="2.5"
+            android:listSelector="#bcf0ff"/>
         <ListView
             android:id="@+id/memo_view"
+            android:dividerHeight="2dp"
+            android:divider="#E2E2E2"
             android:layout_width="0dp"
-            android:layout_weight="8"
-            android:layout_height="match_parent"/>
+            android:layout_weight="6.5"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="16px"/>
 
     </LinearLayout>
 
     <Button
         android:id="@+id/note_create_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:text="@string/button_string_note_create" />
+        android:layout_width="100px"
+        android:layout_height="100px"
+        android:layout_gravity="right|bottom"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="100dp"
+        android:background="@drawable/add"
+        />
+<!--    android:text="@string/button_string_note_create"-->
 
 </FrameLayout>
