--- a/client/app/src/main/res/layout/team_layout.xml
+++ b/client/app/src/main/res/layout/team_layout.xml
@@ -4,6 +4,11 @@
     android:layout_height="match_parent" >
     <TextView
         android:id="@+id/team_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="#000000"
+        android:height="140px"
+        android:textSize="16dp"
+        android:gravity="center_vertical"
+        android:paddingLeft="10dp"/>
 </LinearLayout>
