--- a/client/app/src/main/res/menu/bottom_menu.xml
+++ b/client/app/src/main/res/menu/bottom_menu.xml
@@ -5,22 +5,22 @@
 
     <item
         android:id = "@+id/main_tab"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:enabled="true"
-        android:icon="@android:drawable/ic_menu_call"
+        android:icon="@drawable/ic_qr"
         android:title="메인" />
 
     <item
         android:id = "@+id/note_tab"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:enabled="true"
-        android:icon="@android:drawable/ic_menu_edit"
+        android:icon="@drawable/ic_memo"
         android:title="메모" />
 
     <item
         android:id = "@+id/setting_tab"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:enabled="true"
-        android:icon="@android:drawable/ic_menu_agenda"
+        android:icon="@drawable/ic_setting"
         android:title="설정" />
 </menu>
