round image qrcode view
round image qrcode view

--- a/client/app/src/main/res/layout/fragment_makenote.xml
+++ b/client/app/src/main/res/layout/fragment_makenote.xml
@@ -100,6 +100,8 @@
         android:layout_height="290dp"
         android:layout_gravity="center"
         android:visibility="invisible"
+        android:background="@drawable/round_outline"
+        android:clipToOutline="true"
         android:src="@drawable/button_rect_normal" />
 
 </FrameLayout>
