camera ui change
카메라 ui를 바꿨다.

--- a/client/app/src/main/res/layout/fragment_main.xml
+++ b/client/app/src/main/res/layout/fragment_main.xml
@@ -1,17 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="60dp"
+    android:layout_marginBottom="50dp"
     tools:context=".MainFragment">
 
     <Button
         android:id="@+id/qr_scan_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:text="@string/button_string_qr_scan" />
+        android:layout_gravity="center"
+        android:background="@drawable/ic_baseline_qr_code_scanner_240" />
+
+<!--    <ImageView-->
+<!--        android:id="@+id/imageView2"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_gravity="center"-->
+<!--        android:src="@drawable/cali1" />-->
 
 </FrameLayout>
