--- a/client/app/src/main/res/layout/activity_read_note.xml
+++ b/client/app/src/main/res/layout/activity_read_note.xml
@@ -1,73 +1,113 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_weight="1"
-    android:orientation="vertical"
-    tools:context=".Note.MakeNote">
+    tools:context=".Note.ReadNoteActivity">
 
     <LinearLayout
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_weight="13"
-        android:background="#F3EAA1"
-        android:orientation="vertical">
+        android:layout_weight="1"
+        android:background="@color/colorWhite"
+        android:orientation="vertical" >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:layout_weight="13"
+            android:orientation="vertical"
+            android:background="@drawable/border_bottom">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <EditText
+                    android:id="@+id/editNote_Head"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
+                    android:gravity="center_vertical"
+                    android:hint="제목"
+                    android:layout_marginLeft="20px"
+                    android:textColor="#000000"
+                    android:textColorHint="#E2E2E2"
+                    android:inputType="text"
+                    android:background="@android:color/transparent"
+                    app:layout_constraintTop_toBottomOf="@+id/button_load" />
+
+                <Button
+                    android:id="@+id/button_save"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="10"
+                    android:text="저장"
+                    android:textSize="16dp"
+                    android:textColor="#000000"
+                    android:background="@color/colorWhite"/>
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
             <EditText
-                android:id="@+id/editNote_Head"
-                android:layout_width="350dp"
+                android:id="@+id/editNote"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:ems="10"
+                android:layout_marginLeft="20px"
+                android:textColor="#000000"
                 android:gravity="top"
-                android:hint="write down here"
-                android:inputType="text"
+                android:textSize="20dp"
+                android:inputType="textMultiLine"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/button_load" />
+                app:layout_constraintTop_toBottomOf="@+id/button_load"/>
 
-            <Button
-                android:id="@+id/button_save"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="right"
-                android:layout_marginTop="0.5mm"
-                android:layout_marginRight="1mm"
-                android:text="수정"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/button_load"
-                tools:ignore="SpeakableTextPresentCheck" />
         </LinearLayout>
-
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:orientation="vertical">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|left"
+        android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/editNote"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:ems="10"
-            android:gravity="top"
-            android:hint="write down here"
-            android:inputType="textMultiLine"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button_load" />
+        <Button
+            android:id="@+id/info_btn"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/info"/>
+        <Button
+            android:id="@+id/button_qr_show"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:background="@drawable/ic_qr"
+            tools:ignore="SpeakableTextPresentCheck"  />
     </LinearLayout>
 
-</LinearLayout>
 
+    <ImageView
+        android:id="@+id/qr_imageView"
+        android:layout_width="290dp"
+        android:layout_height="290dp"
+        android:layout_gravity="center"
+        android:visibility="invisible"
+        android:src="@drawable/button_rect_normal" />
+
+    <ListView
+        android:id="@+id/memo_vcs"
+        android:layout_width="match_parent"
+        android:layout_height="400dp"
+        android:layout_gravity="center"
+        android:visibility="invisible"
+        android:background="#bcf0ff"/>
+</FrameLayout>
