--- a/client/app/src/main/res/layout/fragment_makenote.xml
+++ b/client/app/src/main/res/layout/fragment_makenote.xml
@@ -9,67 +9,47 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:orientation="vertical" >
+        android:background="@color/colorWhite"
+        android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="13"
-            android:background="#F3EAA1"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:background="@drawable/border_bottom">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                >
 
                 <EditText
                     android:id="@+id/editNote_Head"
-                    android:layout_width="155dp"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:ems="10"
-                    android:gravity="top"
-                    android:hint="@string/write_down"
+                    android:layout_weight="2"
+                    android:gravity="center_vertical"
+                    android:hint="제목"
+                    android:layout_marginLeft="20px"
+                    android:textColor="#000000"
+                    android:textColorHint="#E2E2E2"
                     android:inputType="text"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
+                    android:background="@android:color/transparent"
                     app:layout_constraintTop_toBottomOf="@+id/button_load" />
 
                 <Button
                     android:id="@+id/button_save"
-                    android:layout_width="54dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:layout_marginTop="1dp"
-                    android:layout_marginEnd="2dp"
-                    android:text="@string/button_string_save"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/button_load"
-                    tools:ignore="SpeakableTextPresentCheck" />
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="10"
+                    android:text="저장"
+                    android:textSize="16dp"
+                    android:textColor="#000000"
+                    android:background="@color/colorWhite"/>
 
-                <Button
-                    android:id="@+id/button_qr_show"
-                    android:layout_width="114dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="end"
-                    android:layout_marginTop="1dp"
-                    android:layout_marginEnd="2dp"
-                    android:text="@string/button_string_qr_show"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/button_load"
-                    tools:ignore="SpeakableTextPresentCheck" />
-
-
-<!--                <ImageView-->
-<!--                    android:id="@+id/qr_imageView"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:src="@drawable/button_rect_normal"/>-->
-            </LinearLayout>
-
+                </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
@@ -83,8 +63,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:ems="10"
+                android:layout_marginLeft="20px"
+                android:textColor="#000000"
                 android:gravity="top"
-                android:hint="@string/write_down"
+                android:textSize="20dp"
                 android:inputType="textMultiLine"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -94,14 +76,5 @@
         </LinearLayout>
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/qr_imageView"
-        android:layout_width="290dp"
-        android:layout_height="290dp"
-        android:layout_gravity="center"
-        android:visibility="invisible"
-        android:background="@drawable/round_outline"
-        android:clipToOutline="true"
-        android:src="@drawable/button_rect_normal" />
 
 </FrameLayout>
